# sysprog-rp2040

./: .gitignore  readme.txt
arm/: Makefile  array_sum.S  hello_aarch64.S
arm_asm/: CMakeLists.txt  hello.S  hw_hello.S  hw_inline.c
hello-world/: CMakeLists.txt  hello_usb.c
ld/: Makefile  Makefile.old  extern.c  libcall.c  link.ld  link2.ld  run.c  startfiles.S
ld-test/: rp2040_boot.ld
ld/ldscript/: link.ld  link1.ld
ld/x86/: .clang-format  Makefile  extern.c  linker.ld  linker2.ld  main.c  startup.S
retq/: CMakeLists.txt  returned.c
section-test/: .gdb_history  CMakeLists.txt  main.c
test/: exotic_pointer_1.c  initfini.c
thumb/: .gdb_history  CMakeLists.txt  caller.c  qemu_emulated.S  test_asm.c  test_asm.s  test_thumb.c  test_thumb.s  volatile.S
wrap/: wrap_malloc.c
